--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <label for="message">Message</label>
                         <textarea id="message" name="message" placeholder="Your Message" rows="5" required ></textarea>
                     </div>
-                    <button type="submit">Send Message</button>
+                    <button  class="button-49" type="submit">Submit</button>
                 </form>
             
                 <div class="social-icons">
