--- a/index.html
+++ b/index.html
@@ -40,6 +40,47 @@
                 </div>
                 <div class="about-text">
                     <p>Stepping into the exciting world of full-stack development, I'm a recent graduate fueled by a passion for crafting seamless web experiences. Driven by an insatiable curiosity and a knack for problem-solving, I find joy in translating complex ideas into user-friendly interfaces and robust backend structures. While my journey is just beginning, I'm energized by a constant hunger for knowledge and a dedication to pushing the boundaries of my capabilities. Dive into my portfolio and witness the potential unfolding, project by project.</p>
+                    
+                    <!-- Tabs integrated into the about text -->
+                    <div class="tabs">
+                        <button class="tab-button active" data-tab="skills">Skills</button>
+                        <button class="tab-button" data-tab="experience">Experience</button>
+                        <button class="tab-button" data-tab="education">Education</button>
+                    </div>
+
+                    <!-- Tab content integrated into the about text -->
+                    <div class="tab-content active" id="skills">
+                        <ul>
+                            <li><span class="tab-li">UX/UI</span><br>
+                                Designing Web/App interfaces</li><br>
+                            <li><span class="tab-li">Web Development</span><br>
+                            Web app development</li><br>
+                            <li><span class="tab-li">Software Development</span><br>
+                               Building Computer Program</li><br>
+                        </ul>
+                    </div>
+
+                    <div class="tab-content" id="experience">
+                        <ul>
+                            <li><span class="tab-li">2024 April- Current</span><br>
+                                Designing Web/App interfaces</li><br>
+                            <li><span class="tab-li">2024 March-Current</span><br>
+                                Building Computer programs</li><br>
+                           
+                        </ul>
+                    </div>
+
+                    <div class="tab-content" id="education">
+                        <ul>
+                            <li><span class="tab-li">2019-2020</span><br>
+                                10th From Army Public School Shankar Vihar,New Delhi</li><br>
+                            <li><span class="tab-li">2021-2022</span><br>
+                            12th From Army Public School Delhi Cantt,New Delhi</li><br>
+                            <li><span class="tab-li">2022-current</span><br>
+                               Institute of technical education and research,Bhubaneswar</li><br>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
             <hr class="card-divider">
@@ -93,9 +134,10 @@
                     <a href="https://wa.me/qr/XRQSIJWRV3TSH1" class="social-icon"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </section>
-
-    </div>
+        </div>
+        <footer>
+            <p>&copy; 2024 Swastik Panda. All rights reserved.</p>
+        </footer>
     <script src="t2.js"></script>
-    <script src="scroll.js"></script>
 </body>
 </html>
