--- a/index.html
+++ b/index.html
@@ -196,7 +196,11 @@
                     </div>
                     <button class="button-49" type="submit">Submit</button>
                 </form>
-
+                <a href="your_resume.pdf" download>
+                    <button class="resume-btn">Download Resume</button>
+                </a>
+                
+                
                 <div class="social-icons">
                     <a href="https://x.com/Panda_DNF?t=T25BpZvAMFZPJ4actCE4tA&s=09" class="social-icon"><i
                             class="fab fa-twitter"></i></a>
