--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
                     </div>
                     <button class="button-49" type="submit">Submit</button>
                 </form>
-                <a href="your_resume.pdf" download>
+                <a href="SwastikResume.pdf" download>
                     <button class="resume-btn">Download Resume</button>
-                </a>
+                </a>    
                 
                 
                 <div class="social-icons">
