--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     </div>
                     <button class="button-49" type="submit">Submit</button>
                 </form>
-                <a href="SwastikResume.pdf" download>
+                <a href="Resume.pdf" download>
                     <button class="resume-btn">Download Resume</button>
                 </a>    
                 
@@ -222,3 +222,4 @@
 </body>
 
 </html>
+
